--- a/blogs.css
+++ b/blogs.css
@@ -15,23 +15,35 @@ body, html {
 
 /* Hero Section with Clip-Path */
 .hero-section {
-  background: url('images/blogbg.jpg') no-repeat center center/cover;
-  height: 60vh;
-  width: 100%;
+   --r: 20px;  /* smoother outer radius */
+  --s: 25px;  /* inner curve close to radius */
+  --x: 125px;   /* small offset for balance */
+  --y: 25px;   /* small offset for balance */
+ 
+  width: calc(100% - 28px); /* account for left+right margin */
+  height: 400px;
   position: relative;
-  padding: 0px 80px 0px 0px; /* Removed left padding to push logo to the left */
-  overflow: hidden;
-
-  /* Adding Borders to All Four Sides */
-  border: 10px solid #f8f6f6;
-  box-sizing: border-box;
-
-  /* Border-radius for curved corners */
-  border-top-right-radius: 0px;
-  border-top-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-  border-bottom-left-radius: 30px;
+ 
+  margin: 10px; /* equal thin spacing on all sides */
+ 
+  background: url('images/blogbg.jpg') no-repeat center center/cover;
+  background-size: 100%; /* Zoom in the image */
+  border-radius: var(--r);
+ 
+  --_m:/calc(2*var(--r)) calc(2*var(--r)) radial-gradient(#000 70%,#0000 72%);
+  --_g:conic-gradient(at calc(100% - var(--r)) var(--r),#0000 25%,#f7f3f3 0);
+  --_d:(var(--s) + var(--r));
+ 
+  mask:
+    calc(100% - var(--_d) - var(--x)) 0 var(--_m),
+    100% calc(var(--_d) + var(--y)) var(--_m),
+    radial-gradient(var(--s) at 100% 0,#0000 99%,#f0eded calc(100% + 1px))
+      calc(-1*var(--r) - var(--x)) calc(var(--r) + var(--y)),
+    var(--_g) calc(-1*var(--_d) - var(--x)) 0,
+    var(--_g) 0 calc(var(--_d) + var(--y));
+  mask-repeat: no-repeat;
 }
+
 
 .hero-section::after {
   content: "";
@@ -239,8 +251,8 @@ body, html {
 
 .get-in-touch {
   position: absolute;
-  top: 13px;
-  right: 0px;
+  top: 20px;
+  right: 25px;
   background: #2471ff;
   color: #fff;
   padding: 10px 20px;
